--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.0",
+    "autoprefixer": "^10.4.4",
     "tailwindcss": "^3.0.23"
   },
   "scripts": {
-    "start": "vite"
+    "start": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "keywords": [],
   "author": "",
